<?xml version="1.0"?>
<package>
  <name>vnet</name>
  <version>1.0.0</version>
  <description>vNET is a virtual Network, 
  	aimed at simulating communication disturbances and contraints during multi-robot missions</description>

  <maintainer email="charles.lesire@onera.fr">Charles Lesire-Cabaniols</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>
